# flutter_demo

./: .gitattributes  .metadata  flutter_rust_bridge.yaml  pubspec.yaml
lib/: main.dart
lib/src/: async_widget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  memory.dart  utils.dart
lib/src/rust/api/: memory.dart
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  memory.rs  utils.rs
rust/src/api/: memory.rs
rust_builder/macos/: rust_lib_flutter_demo.podspec
test/: memory_test.dart
